discussion/kv_engine/182646/182646_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: System Event via flatbuffers

Change-Id: I3807df9b3566a5ac695b6ce8eb51507737eb1d96

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-15 10:22:35.000000000
Message: 
Uploaded patch set 5: New patch set was added with same tree, parent, and commit message as Patch Set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-15 10:22:55.000000000
Message: 
Patch Set 5: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/324784/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-15 11:25:10.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/461/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.h:160:16: error: no type named "string_view" in namespace "std" [clang-diagnostic-error]
constexpr std::string_view DcpControlFlatbufferSystemEvents =
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/collections/collections_kvstore_test.cc:134:20: warning: use emplace_back instead of push_back [modernize-use-emplace]
                rv.push_back({sid, cid, name, maxTtl, CanDeduplicate::Yes});
                   ^~~~~~~~~~~                                           ~
                   emplace_back(

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/461/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/dcp-types.h:160:16:
error: no type named "string_view" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/461/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/446/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/dcp-types.h:160:16:
error: no type named "string_view" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/446/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/600/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [10/93]: test dcp replica stream backfill.....\kv_engine\engines\ep\tests\ep_testsuite_dcp.cc:3223 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
(47 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/600/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/457/ : FAILURE

Compile error at [2022-11-15T11:09:21.151Z] ../kv_engine/engines/ep/src/dcp/dcp-types.h:160:16:
error: no type named "string_view" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/457/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/480/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3223 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
[2022-11-15T11:05:07.716Z] (511 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/480/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/470/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3221 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
[2022-11-15T11:12:46.930Z] (126 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/470/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/470/ )

Test exceeded the timeout:
[2022-11-15T11:12:46.930Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/470/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/703/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...Uncaught std::exception. what():to_string(cb::mcbp::ClientOpcode): Invalid opcode: 255
[2022-11-15T10:42:11.283Z] (55 ms) DIED
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/703/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/460/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3221 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
[2022-11-15T10:58:11.893Z] (30 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/460/ )

Test exceeded the timeout:
[2022-11-15T10:58:11.893Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/460/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/480/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [9/93]: test dcp consumer noop...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3221 Test failed: `" (Expected `DCP_STREAM_REQ", got `DCP_CONTROL" - Unexpected last_op)
[2022-11-15T11:09:17.469Z] (117 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/480/ )

Test exceeded the timeout:
[2022-11-15T11:09:17.469Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/480/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21177/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/471/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-11-24 13:25:50.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
